# routing

./: .gitignore  README.md  app.advanced-routing.py  app.basic-http.py  app.basic-routing.py  app.basic-targets.py  app.http-any.py  app.inverse-cli.py  app.new-api.py  app.py  app.v1.py  app.v2.py  pyproject.toml  tst.get-cls-from-dec.py  tst.handler.py  tst.http-any-method.py  tst.middleware.py  tst.reductively-equals.py
.ignore/: TODO.txt
routing/: _.types.py  __init__.py  annotations.py  api.py  enums.py  errors.py  extracters.py  labels.py  mixins.py  models.py  router.py  routers.py  sentinels.py  types.py
tests/: test_annotations.py  test_api.py  test_mount.py  test_route.py  test_router.py
