[tool.poetry]
name = "routing"
version = "0.1.1"
description = "Routing for Python"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
concatenate = "^0.1.2"
arguments = {git = "https://github.com/tombulled/arguments.git", rev = "main"}
annotate = {git = "https://github.com/tombulled/annotate.git", rev = "main"}
parse = "^1.19.0"
sentinel = {git = "https://github.com/tombulled/sentinel.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
